# cpp_first_static_lib

./: .gitignore  CMakeLists.txt  README.md  library.cpp  library.h
